add five lession

--- a/Домашка.md
+++ b/Домашка.md
@@ -32,3 +32,33 @@ hobby -> i think it be cool if a take play warhammer which my frends as a hobby
 - Are old school hobbies too tedious for you? -> its was been really tidius when i did homework
 - What is your best friend a big fan of? -> My best frend is a big fan of berserk board games
 - What do you find ridiculous in studying English? -> I didnt find somethink ridiculous in studying English?
+
+<hr/>
+
+1)
+1. does not meat
+2. works, does not live
+3. prefers
+4. sings, plays
+5. love, does not eat
+6. does not like
+7. come, does not make
+8. does not give
+
+2)
+(1) does not live
+(2) lives
+(3) work
+(4) loves
+(5) speak on
+(6) do not live
+(7) enjoy
+(8) try
+
+3)
+1. What do you have for brakfast? Today i'm not take anythink
+2. How often do you watch TV?  I'm not watch TV.
+3. Do you visit friends at the weekend?  Yeah, I'm visit all my friends.
+4. Do you family go to the beach in summer? Yes, me and my family are visit beach every summer
+5. Do you often go to bed late? Yeah, i'm go to bed late every day.
+6. how often do your best friend phone you? Every day he is call me to my phone
